Fix test and add web pages for manual test

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12-alpine
 
-COPY server.py /usr/bin/server.py
+COPY systeme-io-api-mock.py /usr/bin/systeme-io-api-mock.py
 COPY test_suite.py /usr/bin/test_suite.py
 
 RUN pip install \
@@ -9,4 +9,4 @@ RUN pip install \
 
 EXPOSE 8081
 
-ENTRYPOINT ["/usr/bin/server.py"]
+ENTRYPOINT ["/usr/bin/systeme-io-api-mock.py"]
