Add tests for the mock

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.12-alpine
 
-COPY systeme-io-api-mock.py /usr/bin/systeme-io-api-mock.py
-COPY test_suite.py /usr/bin/test_suite.py
+RUN mkdir /opt/test
+COPY api_mock.py /usr/bin/api_mock.py
+COPY test_*.py /opt/test
+RUN chmod +x /usr/bin/api_mock.py /opt/test/test_*.py
 
 RUN pip install \
     flask \
@@ -9,4 +11,4 @@ RUN pip install \
 
 EXPOSE 8081
 
-ENTRYPOINT ["/usr/bin/systeme-io-api-mock.py"]
+ENTRYPOINT ["/usr/bin/api_mock.py"]
