--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,12 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - run: docker ps --all
+
       - name: Run tests
         run: make test
+
+      - run: docker ps --all
 
       - name: Kill test containers
         if: always()
         run: make kill
+
+      - run: docker ps --all
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
